# web-service

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  htnet
.github/: SECURITY.md
documentation/: configuration-schema.yaml  htnet.md
documentation/hypertext-transfer/: brave-signature.http  curl-signature.http  htnet-main.http  vivaldi-signature.http
src/: arguments.rs  configuration.rs  errors.rs  hypertext_transfer.rs  json.rs  jwt.rs  main.rs  service.rs  shared.rs  tests.rs  tokens.rs  yaml.rs
src/arguments/: argument_lexer.rs  argument_parser.rs  argument_syntax_tree.rs  argument_tokenizer.rs  command_arguments.rs  flag_arguments.rs  print_help.rs  print_version.rs  prompt_command.rs
src/authentication/: authenticator.rs
src/authorization/: authorizer.rs
src/configuration/: service_configuration.rs
src/errors/: http_error.rs  lexer_error.rs
src/events/: event_queue.rs
src/hypertext_transfer/: http_client.rs  http_connection.rs  http_event_cache.rs  http_event_queue.rs  http_headers.rs  http_lexer.rs  http_methods.rs  http_mime_types.rs  http_parser.rs  http_request.rs  http_response.rs  http_security_directives.rs  http_server.rs  http_status_codes.rs  http_status_texts.rs  http_syntax_tree.rs  http_task_cache.rs  http_task_queue.rs  http_task_scheduler.rs  http_tokenizer.rs  http_versions.rs
src/json/: json_lexer.rs  json_parser.rs  json_syntax_tree.rs  json_tokenizer.rs
src/jwt/: jwt_lexer.rs  jwt_parser.rs  jwt_syntax_tree.rs  (+1 more)
systemd/: htnet.service
web/: .gitignore  deno.json  jsconfig.json  tsconfig.json
(+27 files in other folders)
