[workspace]
resolver = "2"

[package]
description = "Web Service"
edition = "2024"
include = [
  "Cargo.toml",
  "src/**/*"
]
name = "hyaena_technologies_web"
publish = false
rust-version = "1.89.0"
version = "0.2.0"

[[bin]]
name = "htnet"
path = "src/main.rs"

[dependencies]
flate2 = "1.1.2"
hyper = { version = "1.7.0", features = ["full"] }
rustls = "0.23.31"
serde_json = "1.0.145"

