[workspace]
resolver = "2"

[package]
description = "Web Service"
edition = "2024"
include = [
  "Cargo.toml",
  "src/**/*"
]
name = "hyaena_technologies_web"
publish = false
rust-version = "1.90.0"
version = "0.2.0"

[[bin]]
name = "htnet"
path = "src/main.rs"

[dependencies]
flate2 = "1.1.2"
hyper = { version = "1.7.0", features = ["full"] }
rustls = { version = "0.23.32", features = ["std"] }
serde_json = { version = "1.0.145", features = ["std"] }
time = { version = "0.3.44", features = ["std"] }

